# MetaMCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_VS_IMPLEMENTATION_ANALYSIS.md  Dockerfile  FEATURE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  SECURITY_IMPROVEMENTS.md  TODO.md  alembic.ini  bandit-report.json  docker-compose.monitoring.yml  docker-compose.yml  docker.env.example  env.example  metamcp-cli  metamcp.db  mkdocs.yml  monitor_continuous.sh  monitor_logs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  status.sh  test.db  test_mcp_simple.py  test_websocket.py  view_logs.sh
.github/workflows/: ci.yml  dependency-update.yml  docs.yml  release-bump.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_extended_models.py
docs/: README.md  admin-interface.md  api-versioning.md  api.md  composition-improvements.md  configuration.md  development.md  index.md  mcp-advanced-features.md  mcp-transport-implementation.md  roadmap.md  security.md  security_features.md  security_implementation_summary.md
docs/api/: index.md
docs/developer-guide/: architecture.md  code-structure.md  development-setup.md  proxy-development.md  testing.md
docs/development/: contributing.md  documentation-structure.md
docs/development/analysis/: DOCUMENTATION_WORKFLOW_CHANGES.md  GITHUB_ACTIONS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md
docs/getting-started/: proxy-quick-start.md  quick-start.md
docs/monitoring/: index.md  production-setup.md  telemetry.md
docs/oauth/: fastmcp-integration.md
docs/reference/: configuration.md  environment-variables.md  proxy-api.md
docs/user-guide/: api-reference.md  proxy-wrapper.md  security.md
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/vault/: README.md  configmap.yaml  deploy.sh  deployment.yaml  external-secrets.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret-store.yaml  service.yaml  vault-init.yaml
metamcp/: __init__.py  client.py  config.py  exceptions.py  main.py  server.py
metamcp/admin/: interface.py  streamlit_app.py
metamcp/admin/static/: index.html
metamcp/api/: __init__.py  admin.py  auth.py  composition.py  health.py  oauth.py  proxy.py  resource_management.py  router.py  tools.py  versioning.py
metamcp/api/v1/: __init__.py  router.py
metamcp/api/v2/: __init__.py  admin.py  analytics.py  auth.py  composition.py  health.py  router.py  tools.py
metamcp/auth/: oauth.py
metamcp/cache/: decorators.py  redis_cache.py
metamcp/composition/: __init__.py  engine.py  executor.py  models.py  orchestrator.py  persistence.py
metamcp/database/: __init__.py  connection.py  models.py
metamcp/llm/: service.py
metamcp/mcp/: load_balancer.py  server.py  streaming.py  transport_plugins.py
metamcp/monitoring/: __init__.py  health.py  metrics.py  performance.py  telemetry.py
metamcp/performance/: background_tasks.py  circuit_breaker.py  connection_pool.py
metamcp/proxy/: __init__.py  discovery.py  interceptor.py  manager.py  wrapper.py
metamcp/security/: api_keys.py  auth.py  middleware.py  policies.py  policy_tester.py  rate_limiting.py  resource_limits.py  tool_registry.py
metamcp/services/: __init__.py  auth_service.py  search_service.py  service_discovery.py  tool_service.py
metamcp/tools/: registry.py
metamcp/utils/: __init__.py  api_versioning.py  cache.py  circuit_breaker.py  constants.py  database.py  error_handler.py  helpers.py  logging.py  rate_limiter.py
metamcp/vector/: client.py
monitoring/: alert_rules.yml  alertmanager.yml  otel-collector-config.yml  prometheus.yml
monitoring/grafana/dashboards/: metamcp-overview.json
policies/: admin_access.rego  tool_access.rego
scripts/: README.md  bump_version.py  cli.py  docker_utils.py  docs_utils.py  generate_api_docs.py  generate_secret_key.py  start-dev.sh  start-monitoring.sh  start_admin.py  test_stdio_mcp.py  test_utils.py  validate_env.py
test-results/: blackbox-tests.xml  integration-tests.xml  performance-tests.xml  security-scan-after-fixes.json  security-scan.json  security-tests.xml  test-report-20250725_223712.json  test-report-20250725_223815.json  test-report-20250725_224835.json  test-report-20250725_224940.json  test-report-20250725_225106.json  unit-tests.xml
tests/: README.md  README_CLI_TESTS.md  README_TESTING.md  __init__.py  conftest.py  run_all_tests.py  run_cli_tests.py  run_security_tests.py  simple_cli_test.py  simple_security_test.py  test_auth.py  test_data_factory.py  test_health.py  test_performance.py  test_security.py  test_services.py  test_telemetry.py  test_tools.py  test_utils.py
tests/blackbox/: README.md  __init__.py  blackbox-results.xml  conftest.py  run_tests.py
tests/blackbox/integration/: __init__.py  test_workflows.py
tests/blackbox/mcp_api/: __init__.py  test_protocol.py
tests/blackbox/performance/: __init__.py  test_load.py
tests/blackbox/rest_api/: __init__.py  test_admin.py  test_auth.py  test_composition.py  test_health.py  test_oauth.py  test_proxy.py  test_tools.py
tests/blackbox/security/: test_security.py
tests/integration/: test_auth.py  test_cli_integration.py  test_end_to_end.py  test_example_integration.py  test_security_integration.py  test_tools.py
tests/performance/: load_testing.py
tests/regression/: test_example_regression.py
tests/unit/: test_api_versioning.py  test_cli.py  test_cli_utils.py  test_database.py  test_error_handler.py  test_health.py  test_persistence.py  test_rate_limiter.py  test_services.py  test_utils.py
tests/unit/admin/: test_streamlit_app.py
tests/unit/api/: test_versioning.py
tests/unit/mcp/: test_advanced_streaming.py  test_load_balancer.py  test_transport_plugins.py
tests/unit/performance/: __init__.py  test_circuit_breaker.py  (+2 more)
(+11 files in other folders)
